deixando o jogo mais dificil

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="container__informacoes">
                 <div class="container__texto">
                     <h1></h1>
-                    <p class="texto__paragrafo">Choose a number between 1 and 100</p>
+                    <p class="texto__paragrafo"></p>
                 </div>
                 <input type="number" min="1" max="10" class="container__input">
                 <div class="chute container__botoes">
